--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Nintendo - Home</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    h1 {
+      color:#000
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -51,3 +56,4 @@
 
 </body>
 </html>
+
